{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 276,
  "lineage": "a2002d66-416b-bc5b-9d35-8f67361ae139",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance_5g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f689ed38ea977cd7",
            "arn": "arn:aws:ec2:us-east-2:577328891432:instance/i-05669b4c2248ebf55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05669b4c2248ebf55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "mty754-us-east-2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f7a60aeffddfe5f5",
            "private_dns": "ip-10-0-1-157.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.157",
            "public_dns": "ec2-18-188-133-236.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.133.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c89789ce1df48af6",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d52848299b6abfe",
            "tags": {
              "Name": "ec2_instance_5g"
            },
            "tags_all": {
              "Name": "ec2_instance_5g"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06e7f827d09378f65"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.subnet_5g",
            "aws_vpc.vpc_5g"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_5g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:577328891432:internet-gateway/igw-059f3e138b056d975",
            "id": "igw-059f3e138b056d975",
            "owner_id": "577328891432",
            "tags": {
              "Name": "igw_5g"
            },
            "tags_all": {
              "Name": "igw_5g"
            },
            "vpc_id": "vpc-0507ea12c6f86f7c0"
          },
          "dependencies": [
            "aws_vpc.vpc_5g"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_5g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:577328891432:route-table/rtb-049521a2955b89f83",
            "id": "rtb-049521a2955b89f83",
            "owner_id": "577328891432",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-059f3e138b056d975",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_5g"
            },
            "tags_all": {
              "Name": "route_table_5g"
            },
            "timeouts": null,
            "vpc_id": "vpc-0507ea12c6f86f7c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_5g",
            "aws_vpc.vpc_5g"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_5g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4ae7c7364772da5",
            "route_table_id": "rtb-049521a2955b89f83",
            "subnet_id": "subnet-05d52848299b6abfe"
          },
          "dependencies": [
            "aws_internet_gateway.igw_5g",
            "aws_route_table.route_table_5g",
            "aws_subnet.subnet_5g",
            "aws_vpc.vpc_5g"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:577328891432:security-group/sg-06e7f827d09378f65",
            "description": "Allow inbound SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e7f827d09378f65",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "allow-ssh",
            "name_prefix": "",
            "owner_id": "577328891432",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0507ea12c6f86f7c0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_5g"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_5g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:577328891432:subnet/subnet-05d52848299b6abfe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d52848299b6abfe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "577328891432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_5g"
            },
            "tags_all": {
              "Name": "subnet_5g"
            },
            "vpc_id": "vpc-0507ea12c6f86f7c0"
          },
          "dependencies": [
            "aws_vpc.vpc_5g"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_5g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:577328891432:vpc/vpc-0507ea12c6f86f7c0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b0c26c79cd4b46ac",
            "default_route_table_id": "rtb-00099577bd8d51e7a",
            "default_security_group_id": "sg-0bae67e3cdad10d25",
            "dhcp_options_id": "dopt-0b0a520a26a36876e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0507ea12c6f86f7c0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00099577bd8d51e7a",
            "owner_id": "577328891432",
            "tags": {
              "Name": "vpc_5g"
            },
            "tags_all": {
              "Name": "vpc_5g"
            }
          }
        }
      ]
    }
  ]
}